--- a/styles.css
+++ b/styles.css
@@ -61,12 +61,15 @@ input {
   background: #fff;
   border: 1px solid #ccc;
   border-radius: 4px;
+  color:black;
 }
 .submit > button:hover {
   border-color: #888;
+  color: black;
 }
 .submit > a {
   text-decoration: none;
+  color: black;
 }
 .error {
   color: brown;
